# Building-and-connecting-libraries-3

./: CMakeLists.txt
include/: Leaver.h
main/: main.cpp
src/: Leaver.cpp
